--- a/LazyPepper Website/Frame_Format.css
+++ b/LazyPepper Website/Frame_Format.css
@@ -86,4 +86,6 @@
     /* Adjust the font size as needed */
     font-weight: bold;
     /* Make the text bold if desired */
+    color: #000;
+    /* Set the text color to black */
 }
