--- a/LazyPepper Website/About_Format.css
+++ b/LazyPepper Website/About_Format.css
@@ -130,18 +130,32 @@
 .image-logos {
     display: flex;
     justify-content: center;
-    /* Center its children horizontally */
+    /* Center its children horizontally 
     align-items: center;
     /* Center its children vertically */
 }
 
 /* Styles for the last two images */
 .image-logos img {
-    max-width: 15%;
+    max-width: 25%;
     height: auto;
-    margin-right: 30px;
+    margin-right: 10px;
     margin-top: 10px;
-    /* Add right margin to create spacing between images */
+}
+
+/* Styles for clickable images */
+.clickable-image {
+    max-width: 50%;
+    height: auto;
+    cursor: pointer;
+    /* Change the cursor to a hand on hover to indicate clickability */
+    transition: opacity 0.3s;
+    /* Add a cmooth transition on hover */
+}
+
+.clickable-link:hover {
+    opacity: 0.7;
+    /* adjust the opacity */
 }
 
 /* Styles for the text box */
