Made the left menu a Hamburger Menu
This is not completed but my laptop is about to die. Anyway I made it to where the left menu is a hamburger to attempt to fix the look on mobile.

--- a/LazyPepper Website/Frame_Format.css
+++ b/LazyPepper Website/Frame_Format.css
@@ -48,6 +48,7 @@
     background: none;
     border: none;
     cursor: pointer;
+    top: 0px;
 }
 
 /* Style the hamburger lines (you can use CSS pseudo-elements) */
@@ -61,7 +62,7 @@
 
 /* Hide the menu by default */
 #menu {
-    display: none;
+    display: block;
 }
 
 /* Styles for the content container */
