--- a/LazyPepper Website/About_Format.css
+++ b/LazyPepper Website/About_Format.css
@@ -92,7 +92,7 @@
     align-items: center;
     padding-top: 5px;
     padding-bottom: 5px;
-    border-bottom: 2px solid rgba(255, 255, 0, 0.696);
+    border-bottom: 2px solid brown;
 }
 
 /* Styles for individual images */
@@ -194,7 +194,7 @@
     /* Updated styles for the red column */
     .red-column {
         font-family: Arial, Helvetica, sans-serif;
-        width: 80px;
+        width: 96%;
         background-color: white;
         padding: 7px;
         position: fixed;
@@ -249,7 +249,7 @@
         align-items: center;
         padding-top: 2px;
         padding-bottom: 2px;
-        border-bottom: 1px solid rgba(255, 255, 0, 0.696);
+        border-bottom: 1px solid brown;
     }
 
     /* Styles for individual images */
