--- a/LazyPepper Website/Frame_Format.css
+++ b/LazyPepper Website/Frame_Format.css
@@ -71,6 +71,11 @@
     /* Ensure content starts below the fixed header and column */
     padding-left: 200px;
     /* Adjust to match the width of the red column */
+    background-color: #f0f0f0;
+    /* Background color for the text box */
+    border-top: 3px solid red;
+    border-bottom: 3px solid red;
+    /* Border for the text box #acacac */
 }
 
 /* Styles for the scrollable content */
