--- a/LazyPepper Website/About_Format.css
+++ b/LazyPepper Website/About_Format.css
@@ -195,6 +195,7 @@
     .red-column {
         font-family: Arial, Helvetica, sans-serif;
         width: 96%;
+        height: 35%;
         background-color: white;
         padding: 7px;
         position: fixed;
