--- a/LazyPepper Website/About_Format.css
+++ b/LazyPepper Website/About_Format.css
@@ -199,7 +199,7 @@
         background-color: white;
         padding: 7px;
         position: fixed;
-        top: 75px;
+        top: 50px;
         bottom: 0;
         left: 0;
     }
@@ -225,7 +225,7 @@
 
     /* Styles for the content container */
     .main-container {
-        margin-top: 5px;
+        margin-top: 100%;
         /* Ensure content starts below the fixed header and column */
         padding-left: 100px;
         /* Adjust to match the width of the red column */
