--- a/LazyPepper Website/Frame_Format.css
+++ b/LazyPepper Website/Frame_Format.css
@@ -84,3 +84,85 @@
     padding: 20px;
     /* Add padding or other styles as needed */
 }
+
+
+
+/* Other Desktop CSS goes here */
+
+
+
+/*****************************
+*   CSS FOR MOBILE SCREEN    *
+*****************************/
+
+/* responsive, form small screens, use 13px font size */
+@media (max-width: 760px) {
+
+    /* Style for the header logo image */
+    .header-logo {
+        max-width: 100px;
+        /* Adjust the width of the image */
+        height: auto;
+        /* Maintain the aspect ratio */
+        position: static;
+        /* Absolute positioning for proper placement */
+        top: 0px;
+        /* Adjust the top position as needed */
+        left: 0px;
+        /* Adjust the left position as needed */
+    }
+
+    /* Updated styles for the red column */
+    .red-column {
+        font-family: Arial, Helvetica, sans-serif;
+        width: 96%;
+        background-color: white;
+        padding: 7px;
+        position: static;
+        bottom: 0;
+        left: 0;
+    }
+
+    /* Style the links */
+    .red-column a {
+        display: block;
+        padding: 5px;
+        padding-bottom: 5px;
+        text-decoration: none;
+        color: red;
+        /* Change if you use a different red*/
+        border: 1px solid red;
+        margin: 5px 0;
+        text-align: center;
+        border-radius: 2px;
+    }
+
+    .red-column a.active {
+        background-color: red;
+        color: white;
+    }
+
+    /* Styles for the content container */
+    .main-container {
+        /*margin-top: 100%;
+        /* Ensure content starts below the fixed header and column */
+        padding-left: 5px;
+        /* Adjust to match the width of the red column */
+        background-color: #f0f0f0;
+        /* Background color for the text box */
+        border-top: 1px solid red;
+        border-bottom: 1px solid red;
+        /* Border for the text box #acacac */
+    }
+
+    /* Styles for the scrollable content */
+    .content {
+        /* Add your content styles here */
+        padding: 10px;
+        /* Add padding or other styles as needed */
+    }
+
+
+    /* Rest of Mobile CSS goes here */
+
+}
