--- a/LazyPepper Website/Charcuterie_Format.css
+++ b/LazyPepper Website/Charcuterie_Format.css
@@ -92,10 +92,15 @@ table {
     margin-bottom: 20px;
 }
 
-th,
+th {
+    border: 0px solid #ddd;
+    text-align: left;
+    padding: 8px;
+}
+
 td {
     border: 1px solid #ddd;
-    text-align: left;
+    text-align: center;
     padding: 8px;
 }
 
@@ -113,8 +118,8 @@ th {
     text-decoration: underline;
 }
 
-.edit-btn {
-    background-color: #f2f2f2;
+.buy-btn {
+    background-color: #0dff00;
     border: 1px solid #000000;
     border-radius: 4px;
     color: black;
@@ -129,7 +134,7 @@ th {
     /* Adjust the value according to the button height */
 }
 
-.edit-btn:hover {
+.buy-btn:hover {
     background-color: #d3d3d3;
     cursor: pointer;
 }
