--- a/LazyPepper Website/Specialty_Format.css
+++ b/LazyPepper Website/Specialty_Format.css
@@ -113,8 +113,8 @@ th {
     text-decoration: underline;
 }
 
-.edit-btn {
-    background-color: #f2f2f2;
+.buy-btn {
+    background-color: #0dff00;
     border: 1px solid #000000;
     border-radius: 4px;
     color: black;
@@ -129,7 +129,7 @@ th {
     /* Adjust the value according to the button height */
 }
 
-.edit-btn:hover {
+.buy-btn:hover {
     background-color: #d3d3d3;
     cursor: pointer;
 }
